// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterReset /> should render properly with no fields 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: #3b3b3b;
  padding-left: 6px;
  padding-right: 6px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-2:hover,
.emotion-2.focus-visible:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  />
  <button
    className="emotion-2"
    onClick={[Function]}
    type="button"
  >
    Reset
  </button>
</div>
`;

exports[`<FilterReset /> should reset properly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
}

.emotion-1 {
  padding: 4px;
  padding-left: 6px;
  padding-right: 26px;
  line-height: 19px;
  font-size: 15px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  color: #b3b3b3;
  border: none;
  border-radius: 2px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-color: #3b3b3b;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2IzYjNiMyIgLz4KPC9zdmc+');
  background-repeat: no-repeat;
  -webkit-background-size: 20px;
  background-size: 20px;
  -webkit-background-position: right 3px top 3px;
  background-position: right 3px top 3px;
  cursor: pointer;
}

.emotion-1:hover,
.emotion-1:focus {
  color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: #3b3b3b;
  padding-left: 6px;
  padding-right: 6px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

<div
  className="emotion-0"
>
  <select
    className="emotion-1"
    defaultValue="range"
    onChange={[Function]}
  >
    <option
      value="range"
    >
      range
    </option>
    <option
      value="exists"
    >
      exists
    </option>
  </select>
  <div
    className="emotion-2"
  />
  <button
    className="emotion-3"
    onClick={[Function]}
    type="button"
  >
    Reset
  </button>
</div>
`;

exports[`<FilterReset /> should switch properly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
}

.emotion-1 {
  padding: 4px;
  padding-left: 6px;
  padding-right: 26px;
  line-height: 19px;
  font-size: 15px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  color: #b3b3b3;
  border: none;
  border-radius: 2px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-color: #3b3b3b;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2IzYjNiMyIgLz4KPC9zdmc+');
  background-repeat: no-repeat;
  -webkit-background-size: 20px;
  background-size: 20px;
  -webkit-background-position: right 3px top 3px;
  background-position: right 3px top 3px;
  cursor: pointer;
}

.emotion-1:hover,
.emotion-1:focus {
  color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: #3b3b3b;
  padding-left: 6px;
  padding-right: 6px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

<div
  className="emotion-0"
>
  <select
    className="emotion-1"
    defaultValue="range"
    onChange={[Function]}
  >
    <option
      value="range"
    >
      range
    </option>
    <option
      value="exists"
    >
      exists
    </option>
  </select>
  <div
    className="emotion-2"
  />
  <button
    className="emotion-3"
    onClick={[Function]}
    type="button"
  >
    Reset
  </button>
</div>
`;

exports[`<FilterReset /> should switch properly 2`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
}

.emotion-1 {
  padding: 4px;
  padding-left: 6px;
  padding-right: 26px;
  line-height: 19px;
  font-size: 15px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  color: #b3b3b3;
  border: none;
  border-radius: 2px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-color: #3b3b3b;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2IzYjNiMyIgLz4KPC9zdmc+');
  background-repeat: no-repeat;
  -webkit-background-size: 20px;
  background-size: 20px;
  -webkit-background-position: right 3px top 3px;
  background-position: right 3px top 3px;
  cursor: pointer;
}

.emotion-1:hover,
.emotion-1:focus {
  color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="emotion-0"
>
  <select
    className="emotion-1"
    defaultValue="exists"
    onChange={[Function]}
  >
    <option
      value="range"
    >
      range
    </option>
    <option
      value="exists"
    >
      exists
    </option>
  </select>
  <div
    className="emotion-2"
  />
</div>
`;
